--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "main": "index.js",
   "engines": {
     "node": "14.15.0",
-    "npm":"6.14.8"
-    
+    "npm": "6.14.8"
   },
-  
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dialogflow": "^1.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12"
   }
